brat/test/golden/error/bad_underscore.brat.golden
Error in test/golden/error/bad_underscore.brat on line 2:
uscore = { i => _ }
           ^^^^^^

  Elab error "Noun required at this position"

